[gd_scene load_steps=7 format=3 uid="uid://b70hwns4rlfpw"]

[ext_resource type="Theme" uid="uid://ddip2yriujj48" path="res://theme.tres" id="1_2y55o"]
[ext_resource type="Script" uid="uid://ia5ov4yb0xxq" path="res://player_state_ui.gd" id="2_v0kog"]
[ext_resource type="Texture2D" uid="uid://bt6gg4cs87c6h" path="res://my_assets/heart.png" id="3_d6syb"]
[ext_resource type="Texture2D" uid="uid://cuxfb0gktab5d" path="res://my_assets/coffee.png" id="3_e0p42"]
[ext_resource type="Texture2D" uid="uid://cmv2xj5hg5jo2" path="res://my_assets/trophy.png" id="5_k4ufb"]
[ext_resource type="Texture2D" uid="uid://ccj1r160gllfe" path="res://my_assets/hourglass.png" id="6_0pwgu"]

[node name="PlayerStateUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_2y55o")
script = ExtResource("2_v0kog")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 370.0
offset_bottom = 54.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MoneyIcon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(38, 0)
layout_mode = 2
texture = ExtResource("3_e0p42")
expand_mode = 4
stretch_mode = 4

[node name="MoneyLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "10"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="HeartIcon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(38, 0)
layout_mode = 2
texture = ExtResource("3_d6syb")
expand_mode = 1
stretch_mode = 4

[node name="HPLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "10"

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="WinsIcon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(38, 0)
layout_mode = 2
texture = ExtResource("5_k4ufb")
expand_mode = 4
stretch_mode = 4

[node name="WinsLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0/10"

[node name="VSeparator3" type="VSeparator" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="RoundIcon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(38, 0)
layout_mode = 2
texture = ExtResource("6_0pwgu")
expand_mode = 4
stretch_mode = 4

[node name="RoundLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "10"
